# soap-rs

./: .gitignore  .gitpod.yml  Cargo.toml  crates.js  index.html  search-index.js  settings.html  source-files.js
.github/workflows/: rustdoc.yml
getrandom/: fn.getrandom.html  struct.Error.html
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/std/error/: trait.Error.js
implementors/std/io/: trait.Write.js
soap/: all.html  index.html  sidebar-items.js
soap/addressing/: index.html  sidebar-items.js  struct.Addressing.html  struct.AddressingBuilder.html
soap/envelope/: enum.ParseError.html  enum.WriteError.html  index.html  sidebar-items.js  struct.EmitterConfig.html  struct.Envelope.html
soap/helper/: index.html  sidebar-items.js
src/: addressing.rs  envelope.rs  lib.rs
src/helper/: element_builder.rs  mod.rs  string_buffer.rs
src/soap/: addressing.rs.html  envelope.rs.html  lib.rs.html
src/xmltree/: lib.rs.html
xmltree/: all.html  enum.Error.html  enum.ParseError.html  enum.XMLNode.html  index.html  struct.Element.html  struct.EmitterConfig.html  struct.Namespace.html  trait.ElementPredicate.html
(+15 files in other folders)
